# trakt_app

./: .gitignore  ARCHITECTURE.md  FEATURES.md  README.md  STATE.md  capture_web_ui.bat  pyproject.toml  restart_trakt_tracker_web.bat  run_trakt_tracker.bat  run_trakt_tracker_web.bat
tests/: test_application_services.py  test_enrich_queue.py  test_formatting.py  test_kinopoisk.py  test_repositories.py  test_url_utils.py  test_web_history_routes.py  test_web_progress_routes.py  test_web_system_routes.py  test_web_viewmodels.py
tools/: capture_web_screens.py
trakt_tracker/: __init__.py  config.py  domain.py  formatting.py  main.py  startup_profile.py
trakt_tracker/application/: catalog.py  enrich_queue.py  enrich_state.py  episode_metadata.py  history.py  history_read_model.py  history_sync.py  interactions.py  notification_refresh.py  operations.py  progress_sync.py  services.py  sync_policy.py  trakt_payload_cache.py
trakt_tracker/infrastructure/: cache.py  imdb_dataset.py  keyring_store.py  kinopoisk.py  notifications.py  omdb.py  tmdb.py  url_utils.py
trakt_tracker/infrastructure/trakt/: __init__.py  client.py  oauth.py
trakt_tracker/persistence/: __init__.py  database.py  models.py  repositories.py
trakt_tracker/ui/: __init__.py  main_window.py
trakt_tracker/web/: app.py  app_shared.py  main.py  routes_catalog.py  routes_history.py  routes_progress.py  routes_system.py  viewmodels.py
trakt_tracker/web/static/: style.css
trakt_tracker/web/templates/: base.html  details.html  history.html  history_title_card.html  progress.html  progress_card.html  (+2 more)
